# srgan

./: .gitignore  Cargo.toml  build.rs  rename_images.sh  resize_images.sh
src/: data.rs  data_mnist.rs  data_srgan.rs  lib.rs  main.rs  model.rs  model_old.rs  training.rs  training_old.rs  utils.rs
src/model/: discriminator.rs  generator.rs  layers.rs  vgg19.rs
