[package]
name = "srgan"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "srgan"
path = "src/main.rs"

[features]
build-vgg = []
ndarray = []

[dependencies]
burn = { version = "~0.18", default-features = false, features = ["std", "fusion", "train", "ndarray", "wgpu"] }
burn-wgpu = { version = "~0.18", features = ["vulkan"] }
clap = { version = "4.5.47", features = ["derive"] }
image = { version = "0.25.6" }
walkdir = { version = "2.4" }

[build-dependencies]
burn-import = "~0.18"

